// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with default props 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

.emotion-1 {
  height: 100%;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <img
      alt=""
      class="emotion-1 emotion-2"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with lock 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fafafb;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.emotion-3 {
  fill: #b2b6c3;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-3.emotion-3 {
  vertical-align: middle;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <svg
<<<<<<< HEAD
        class="sc-ui-icon emotion-2 emotion-3"
=======
        class="sc-ui-icon emotion-3"
>>>>>>> feat: use colors from theme
        viewBox="0 0 24 24"
      >
        <path
          d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with sentence 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with small text 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      HE
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ef5774;
  border-radius: 50%;
  color: #fff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;
